--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,11 +2,11 @@
 main:
   - title: "Quick-Start Guide"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
+  - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
+  - title: "Posts"
   #   url: /year-archive/
-  # - title: "Sample Collections"
+  - title: "Collaborater"
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
