--- a/_config.yml
+++ b/_config.yml
@@ -103,9 +103,12 @@ author:
     - label: "ndrw5580@gmail.com"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:ndrw5580@gmail.com"
-    - label: "https://sangwooj.github.io"
+    - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://sangwooj.github.io"
+    - label: "Blog"
+      icon: "fas fa-fw fa-link"
+      url: "https://blog.naver.com/gamsungcoding"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
