--- a/_config.yml
+++ b/_config.yml
@@ -103,9 +103,9 @@ author:
     - label: "ndrw5580@gmail.com"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:ndrw5580@gmail.com"
-    - label: "Website"
+    - label: "LinkedIn"
       icon: "fas fa-fw fa-link"
-      url: "https://sangwooj.github.io"
+      url: "https://www.linkedin.com/in/sangwoo-jeon-811978181/"
     - label: "Blog"
       icon: "fas fa-fw fa-link"
       url: "https://blog.naver.com/gamsungcoding"
