--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Sangwoo Jeon"
 description              : "tech blog"
-url                      : "https://sangwooj.github.io"
+url                      : #"https://sangwooj.github.io"
 baseurl                  : "/about"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
