--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
   
   - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
+    url: /about/
   - title: "People"
   #   url: /collection-archive/
   - title: "Posts"
