--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ analytics:
 author:
   name             : "Sangwoo Jeon"
   avatar           : "/assets/img/profile.png"
-  bio              : "Efficient , flexible and fast learner 가 되기위해 노력중.."
+  bio              : "Efficient , flexible and fast learner 가 되기위해 노력중"
   location         : "Seoul, Republic of Korea"
   email            :
   links:
