--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ author:
       url: "https://www.linkedin.com/in/sangwoo-jeon-811978181/"
     - label: "Blog"
       icon: "fas fa-fw fa-link"
-      url: "https://blog.naver.com/gamsungcoding"
+      url: "https://blog.naver.com/sangwoo3131"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
