--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ author:
     - label: "LinkedIn"
       icon: "fas fa-fw fa-link"
       url: "https://www.linkedin.com/in/sangwoo-jeon-811978181/"
-    - label: "Blog"
+    - label: "네이버 Blog"
       icon: "fas fa-fw fa-link"
       url: "https://blog.naver.com/sangwoo3131"
     - label: "Twitter"
