--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
 # main links
 main:
   
-  - title: "About"
-    url: /about/
+  - title: "Project"
+    url: /project/
   - title: "People"
-  #   url: /collection-archive/
+    url: /people/
   - title: "Posts"
   #   url: /year-archive/
   - title: "Quick-Start Guide"
