--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
   
   - title: "About"
-    url: /index
+    url: https://sangwooj.github.io
   - title: "Project"
     url: /project/
   - title: "People"
