--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ main:
   - title: "People"
     url: /people/
   - title: "Posts"
-    url: /post/
+    url: /year-archive/
   #   url: /year-archive/
   #- title: "Quick-Start Guide"
   #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
