--- a/_config.yml
+++ b/_config.yml
@@ -269,7 +269,12 @@ compress_html:
   ignore:
     envs: development
 
-
+#collections
+collections:
+  projects:
+    output: true
+    permalink: /:collection/:path/
+    
 # Defaults
 defaults:
   # _posts
@@ -283,3 +288,14 @@ defaults:
       comments: # true
       share: true
       related: true
+      
+ defaults:
+  # _projects
+  - scope:
+      path: ""
+      type: projects
+    values:
+      layout: single
+      author_profile: false
+      share: true
+  
